<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.apsu.cwalker61.play_simon.SimonActivity"
    tools:showIn="@layout/activity_simon"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/green_imgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:contentDescription="@string/green_button"
            android:src="@drawable/circle_grey" />

        <ImageButton
            android:id="@+id/red_imgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:contentDescription="@string/red_button"
            android:src="@drawable/circle_grey" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/director_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/director"
            android:textAlignment="center"
            android:textColor="#fc5858"
            android:textSize="30sp"
            android:typeface="serif" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/yellow_imgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/yellow_button"
            android:src="@drawable/circle_grey" />

        <ImageButton
            android:id="@+id/blue_imgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:contentDescription="@string/blue_button"
            android:src="@drawable/circle_grey" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/play_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/simon_1p_rb">

            <RadioButton
                android:id="@+id/simon_1p_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Play Simon One Player"
                tools:text="Play Simon One Player" />

            <RadioButton
                android:id="@+id/simon_2p_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Play Simon Two Player"
                tools:text="Play Simon Two Player" />

            <RadioButton
                android:id="@+id/music_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Play Music"
                tools:text="Play Music" />
        </RadioGroup>

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Start Playing"
            tools:text="Start Playing" />

    </LinearLayout>
</LinearLayout>
